# remail

./: .gitignore  CHANGELOG.md  EMailService.py  database.db  database.db.wal  email2.py  pyproject.toml  ruff.toml  test_main.py
.github/workflows/: pytest.yml  ruff.yml
Backup/llm/db/: data_hash.txt
Backup/llm/db/chroma_db/: chroma.sqlite3
attachments/: message.txt
llm/: RAG_Backend.py  TokenV1.py  chatbot.py
remail/: .project  DatabaseGPT.py  controller.py  email_service.py  main.py
remail/database/: models.py  setup.py
remail/database/attachments/47e34b3b0f0344ff9ca1390c9a1ce078uni-due_de/: Python_fur_Fortgeschrittene.pptx
remail/database/attachments/674976cc_5d0a0220_31d6f4_1676mx_google_com/: test.txt
remail/database_api/: controller.py  credentials_helper.py  models.py
remail/email_api/: credentials_helper.py  email_errors.py  service.py  test_email_api.py
remail/frontend/: home.py
remail/frontend/extra_pages/: registration.py
remail/frontend/pages/: settings.py
remail/llm/: RAG_Backend.py  chatbot.py  testing.py
src/: EMailService.py  Registration.py  bot2.py  chatBot.py  chatbot3.py  firstPage.py  frontend.py  home.py  loginPage.py  registration.py
src/extra_pages/: registration.py
src/pages/: Help.py  Home.py  account.py  frontend.py  help.py  home.py  settings.py
