[tool.poetry]
name = "remail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.3"
sqlmodel = "^0.0.22"
duckdb-engine = "^0.13.5"
exchangelib = "^5.5.0"
llama-index = "^0.12.1"
streamlit = "^1.40.0"
imapclient = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"