[tool.poetry]
name = "remail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.3"
sqlmodel = "^0.0.22"
duckdb-engine = "^0.13.5"
exchangelib = "^5.5.0"
llama-index = "^0.12.1"
streamlit = "^1.40.0"
imapclient = "^3.0.1"
llama-cpp-python = "^0.3.2"
llama-index-vector-stores-chroma = "^0.4.0"
llama-index-embeddings-huggingface = "^0.4.0"
transformers = "^4.46.3"
sentence-transformers = "^3.3.1"
chromadb = "^0.5.23"
sqlalchemy = "^2.0.36"
llama-index-readers-database = "^0.3.0"
werkzeug = "^3.1.3"
keyring = "^25.6.0"
keyring = "^25.6.0"
werkzeug = "^3.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.4"

[tool.poetry.scripts]
my-script = "remail.frontend:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"